perubahan ambil data dari api (finish)